feat: :truck: change json data's routes
from /static/DATA to /static/data/DATA

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -79,7 +79,7 @@
                                     contentType: "application/json",
                                     success: function(data) {
                                         var element = document.createElement('a'); // a 태그 생성
-                                        element.setAttribute("href", "../../static/repo_list_selected.json"); // href 속성에 다운로드할 파일 경로 넣기
+                                        element.setAttribute("href", "../../static/data/repo_list_selected.json"); // href 속성에 다운로드할 파일 경로 넣기
                                         element.setAttribute("download", "repo_list_selected.json"); // 다운로드하여 저장될 파일 이름 설정
                                         document.body.appendChild(element); // body 태그에 a 태그 추가
                                         element.click(); // a 태그 클릭하여 파일 다운로드 진행
@@ -184,7 +184,7 @@
                 if (Math.ceil(scrolled) >= scrollable) {
                     $.ajax({
                         type: "GET",
-                        url: "../../static/{{ repo_name }}",
+                        url: "../../static/data/{{ repo_name }}",
                         dataType: "json",
                         success: function(res) {
                             const length = Object.keys(res).length; // repo 총 개수
