--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand fw-bold" href="/">Smart Contract</a>
+                <a class="navbar-brand fw-bold" href="/"><img src="{{ url_for('static', filename='assets/abc.png') }}" width=70 alt="Logo1">Smart Contract</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <!-- Menus -->
@@ -43,6 +43,7 @@
         <!-- Header-->
         <header class="bg-dark py-5" id="home">
             <div class="container px-4 px-lg-5 my-5">
+                <img id="logo2" src="{{ url_for('static', filename='assets/AIIA_red.png') }}" alt="logo2">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">{{'{:,}'.format(total)}} Repositories</h1>
                     <p class="lead fw-normal text-white-50 mb-0">We have been crawling...</p>
